# phi-3-vision-onnx

./: .gitignore  LICENSE  License  README.md  main.py  pyproject.toml
setup/: cuda.sh  dependencies.sh  model.sh  setup.sh
